cc = meson.get_compiler('cpp')

common_src = [
  'src/Animation/OgreBone.cpp',
  'src/Animation/OgreSkeletonAnimManager.cpp',
  'src/Animation/OgreSkeletonAnimation.cpp',
  'src/Animation/OgreSkeletonAnimationDef.cpp',
  'src/Animation/OgreSkeletonDef.cpp',
  'src/Animation/OgreSkeletonInstance.cpp',
  'src/Animation/OgreSkeletonManager.cpp',
  'src/Animation/OgreSkeletonTrack.cpp',
  'src/Animation/OgreTagPoint.cpp',
  'src/CommandBuffer/OgreCbDrawCall.cpp',
  'src/CommandBuffer/OgreCbLowLevelMaterial.cpp',
  'src/CommandBuffer/OgreCbPipelineStateObject.cpp',
  'src/CommandBuffer/OgreCbShaderBuffer.cpp',
  'src/CommandBuffer/OgreCbTexture.cpp',
  'src/CommandBuffer/OgreCommandBuffer.cpp',
  'src/Compositor/OgreCompositorManager2.cpp',
  'src/Compositor/OgreCompositorNode.cpp',
  'src/Compositor/OgreCompositorNodeDef.cpp',
  'src/Compositor/OgreCompositorShadowNode.cpp',
  'src/Compositor/OgreCompositorShadowNodeDef.cpp',
  'src/Compositor/OgreCompositorWorkspace.cpp',
  'src/Compositor/OgreCompositorWorkspaceDef.cpp',
  'src/Compositor/OgreTextureDefinition.cpp',
  'src/Compositor/Pass/OgreCompositorPass.cpp',
  'src/Compositor/Pass/OgreCompositorPassDef.cpp',
  'src/Compositor/Pass/PassClear/OgreCompositorPassClear.cpp',
  'src/Compositor/Pass/PassCompute/OgreCompositorPassCompute.cpp',
  'src/Compositor/Pass/PassDepthCopy/OgreCompositorPassDepthCopy.cpp',
  'src/Compositor/Pass/PassMipmap/OgreCompositorPassMipmap.cpp',
  'src/Compositor/Pass/PassQuad/OgreCompositorPassQuad.cpp',
  'src/Compositor/Pass/PassScene/OgreCompositorPassScene.cpp',
  'src/Compositor/Pass/PassStencil/OgreCompositorPassStencil.cpp',
  'src/Compositor/Pass/PassUav/OgreCompositorPassUav.cpp',
  'src/Compute/OgreComputeTools.cpp',
  # 'src/Emscripten/OgreConfigDialog.cpp',
  # 'src/Emscripten/OgreErrorDialog.cpp',
  # 'src/Emscripten/OgreTimer.cpp',
  'src/Hash/MurmurHash3.cpp',
  #'src/Math/Array/C/OgreArrayAabb.cpp',
  #'src/Math/Array/C/OgreArrayMatrix4.cpp',
  #'src/Math/Array/C/OgreArrayMatrixAf4x3.cpp',
  #'src/Math/Array/C/OgreArrayQuaternion.cpp',
  #'src/Math/Array/C/OgreArrayVector3.cpp',
  #'src/Math/Array/C/OgreMathlibC.cpp',
  # ARM NEON
  # 'src/Math/Array/NEON/Single/OgreArrayAabb.cpp',
  # 'src/Math/Array/NEON/Single/OgreArrayMatrix4.cpp',
  # 'src/Math/Array/NEON/Single/OgreArrayMatrixAf4x3.cpp',
  # 'src/Math/Array/NEON/Single/OgreArrayQuaternion.cpp',
  # 'src/Math/Array/NEON/Single/OgreArrayVector3.cpp',
  # 'src/Math/Array/NEON/Single/OgreMathlibNEON.cpp',
  'src/Math/Array/OgreArrayMemoryManager.cpp',
  'src/Math/Array/OgreBoneArrayMemoryManager.cpp',
  'src/Math/Array/OgreBoneMemoryManager.cpp',
  'src/Math/Array/OgreKfTransformArrayMemoryManager.cpp',
  'src/Math/Array/OgreNodeArrayMemoryManager.cpp',
  'src/Math/Array/OgreNodeMemoryManager.cpp',
  'src/Math/Array/OgreObjectDataArrayMemoryManager.cpp',
  'src/Math/Array/OgreObjectMemoryManager.cpp',
  'src/Math/Array/SSE2/Single/OgreArrayAabb.cpp',
  'src/Math/Array/SSE2/Single/OgreArrayMatrix4.cpp',
  'src/Math/Array/SSE2/Single/OgreArrayMatrixAf4x3.cpp',
  'src/Math/Array/SSE2/Single/OgreArrayQuaternion.cpp',
  'src/Math/Array/SSE2/Single/OgreArrayVector3.cpp',
  'src/Math/Array/SSE2/Single/OgreMathlibSSE2.cpp',
  'src/Math/Simple/C/OgreAabb.cpp',
  'src/OgreASTCCodec.cpp',
  'src/OgreAlignedAllocator.cpp',
  'src/OgreAnimable.cpp',
  'src/OgreAnimation.cpp',
  'src/OgreAnimationState.cpp',
  'src/OgreAnimationTrack.cpp',
  'src/OgreArchive.cpp',
  'src/OgreArchiveManager.cpp',
  'src/OgreAssert.cpp',
  'src/OgreAsyncTextureTicket.cpp',
  'src/OgreAtomicScalar.cpp',
  'src/OgreAutoParamDataSource.cpp',
  'src/OgreAxisAlignedBox.cpp',
  'src/OgreBillboard.cpp',
  'src/OgreBillboardChain.cpp',
  'src/OgreBillboardParticleRenderer.cpp',
  'src/OgreBillboardSet.cpp',
  'src/OgreCamera.cpp',
  'src/OgreCodec.cpp',
  'src/OgreColourValue.cpp',
  'src/OgreCommon.cpp',
  'src/OgreConfigFile.cpp',
  'src/OgreConstBufferPool.cpp',
  'src/OgreControllerManager.cpp',
  'src/OgreConvexBody.cpp',
  'src/OgreDDSCodec2.cpp',
  'src/OgreDecal.cpp',
  'src/OgreDefaultHardwareBufferManager.cpp',
  'src/OgreDefaultSceneQueries.cpp',
  'src/OgreDeflate.cpp',
  'src/OgreDepthBuffer.cpp',
  'src/OgreDescriptorSetTexture.cpp',
  'src/OgreDescriptorSetUav.cpp',
  'src/OgreDistanceLodStrategy.cpp',
  'src/OgreDualQuaternion.cpp',
  'src/OgreDynLib.cpp',
  'src/OgreDynLibManager.cpp',
  'src/OgreETCCodec.cpp',
  'src/OgreEdgeListBuilder.cpp',
  'src/OgreEntity.cpp',
  'src/OgreException.cpp',
  'src/OgreExternalTextureSource.cpp',
  'src/OgreExternalTextureSourceManager.cpp',
  'src/OgreFileSystem.cpp',
  'src/OgreForward3D.cpp',
  'src/OgreForwardClustered.cpp',
  'src/OgreForwardPlusBase.cpp',
  #'src/OgreFreeImageCodec2.cpp',
  'src/OgreFrustum.cpp',
  'src/OgreGpuProgram.cpp',
  'src/OgreGpuProgramManager.cpp',
  'src/OgreGpuProgramParams.cpp',
  'src/OgreGpuProgramUsage.cpp',
  'src/OgreGpuResource.cpp',
  'src/OgreHardwareBufferManager.cpp',
  'src/OgreHardwareCounterBuffer.cpp',
  'src/OgreHardwareIndexBuffer.cpp',
  'src/OgreHardwareOcclusionQuery.cpp',
  'src/OgreHardwareUniformBuffer.cpp',
  'src/OgreHardwareVertexBuffer.cpp',
  'src/OgreHiddenAreaMeshVr.cpp',
  'src/OgreHighLevelGpuProgram.cpp',
  'src/OgreHighLevelGpuProgramManager.cpp',
  'src/OgreHlms.cpp',
  'src/OgreHlmsCompute.cpp',
  'src/OgreHlmsComputeJob.cpp',
  'src/OgreHlmsDatablock.cpp',
  'src/OgreHlmsDiskCache.cpp',
  'src/OgreHlmsJson.cpp',
  'src/OgreHlmsJsonCompute.cpp',
  'src/OgreHlmsLowLevel.cpp',
  'src/OgreHlmsLowLevelDatablock.cpp',
  'src/OgreHlmsManager.cpp',
  'src/OgreHlmsSamplerblock.cpp',
  'src/OgreImage2.cpp',
  'src/OgreImageDownsampler.cpp',
  'src/OgreImageResampler.h',
  'src/OgreInternalCubemapProbe.cpp',
  'src/OgreItem.cpp',
  'src/OgreKeyFrame.cpp',
  'src/OgreLight.cpp',
  'src/OgreLodStrategy.cpp',
  'src/OgreLodStrategyManager.cpp',
  'src/OgreLog.cpp',
  'src/OgreLogManager.cpp',
  'src/OgreLwString.cpp',
  'src/OgreManualObject.cpp',
  'src/OgreManualObject2.cpp',
  'src/OgreMaterial.cpp',
  'src/OgreMaterialManager.cpp',
  'src/OgreMaterialSerializer.cpp',
  'src/OgreMath.cpp',
  'src/OgreMatrix3.cpp',
  'src/OgreMatrix4.cpp',
  'src/OgreMemoryAllocatedObject.cpp',
  'src/OgreMemoryNedAlloc.cpp',
  'src/OgreMemoryNedPooling.cpp',
  'src/OgreMemoryTrackAlloc.cpp',
  'src/OgreMemoryTracker.cpp',
  'src/OgreMesh.cpp',
  'src/OgreMesh2.cpp',
  'src/OgreMesh2Serializer.cpp',
  'src/OgreMesh2SerializerImpl.cpp',
  'src/OgreMeshManager.cpp',
  'src/OgreMeshManager2.cpp',
  'src/OgreMeshSerializer.cpp',
  'src/OgreMeshSerializerImpl.cpp',
  'src/OgreMovableObject.cpp',
  'src/OgreMovablePlane.cpp',
  'src/OgreNode.cpp',
  'src/OgreNumerics.cpp',
  'src/OgreOITDCodec.cpp',
  'src/OgreObjCmdBuffer.cpp',
  'src/OgreOfflineProfiler.cpp',
  'src/OgreOldBone.cpp',
  'src/OgreOldNode.cpp',
  'src/OgreOldSkeletonInstance.cpp',
  'src/OgreOldSkeletonManager.cpp',
  'src/OgreOptimisedUtil.cpp',
  'src/OgreOptimisedUtilGeneral.cpp',
  'src/OgreOptimisedUtilSSE.cpp',
  'src/OgreDataStream.cpp',
  'src/OgrePVRTCCodec.cpp',
  'src/OgreParticle.cpp',
  'src/OgreParticleEmitter.cpp',
  'src/OgreParticleEmitterCommands.cpp',
  'src/OgreParticleIterator.cpp',
  'src/OgreParticleSystem.cpp',
  'src/OgreParticleSystemManager.cpp',
  'src/OgrePass.cpp',
  'src/OgrePatchMesh.cpp',
  'src/OgrePatchSurface.cpp',
  'src/OgrePixelConversions.h',
  'src/OgrePixelCountLodStrategy.cpp',
  'src/OgrePixelFormatGpuUtils.cpp',
  'src/OgrePlane.cpp',
  'src/OgrePlatformInformation.cpp',
  'src/OgrePolygon.cpp',
  'src/OgrePose.cpp',
  'src/OgrePrecompiledHeaders.cpp',
  'src/OgrePredefinedControllers.cpp',
  'src/OgrePrefabFactory.cpp',
  'src/OgreProfiler.cpp',
  'src/OgrePsoCacheHelper.cpp',
  'src/OgreQuaternion.cpp',
  'src/OgreRadialDensityMask.cpp',
  'src/OgreRectangle2D.cpp',
  'src/OgreRectangle2D2.cpp',
  'src/OgreRenderPassDescriptor.cpp',
  'src/OgreRenderQueue.cpp',
  'src/OgreRenderSystem.cpp',
  'src/OgreRenderSystemCapabilities.cpp',
  'src/OgreRenderSystemCapabilitiesManager.cpp',
  'src/OgreRenderSystemCapabilitiesSerializer.cpp',
  'src/OgreRenderable.cpp',
  'src/OgreResource.cpp',
  'src/OgreResourceBackgroundQueue.cpp',
  'src/OgreResourceGroupManager.cpp',
  'src/OgreResourceManager.cpp',
  'src/OgreResourceTransition.cpp',
  'src/OgreRibbonTrail.cpp',
  'src/OgreRoot.cpp',
  'src/OgreRotationSpline.cpp',
  'src/OgreSIMDHelper.h',
  'src/OgreSTBICodec.cpp',
  'src/OgreSceneManager.cpp',
  'src/OgreSceneManagerEnumerator.cpp',
  'src/OgreSceneNode.cpp',
  'src/OgreSceneQuery.cpp',
  'src/OgreScriptCompiler.cpp',
  'src/OgreScriptLexer.cpp',
  'src/OgreScriptParser.cpp',
  'src/OgreScriptTranslator.cpp',
  'src/OgreSearchOps.cpp',
  'src/OgreSerializer.cpp',
  'src/OgreShaderParams.cpp',
  'src/OgreShadowCameraSetup.cpp',
  'src/OgreShadowCameraSetupFocused.cpp',
  'src/OgreShadowCameraSetupPSSM.cpp',
  'src/OgreShadowCameraSetupPlaneOptimal.cpp',
  'src/OgreShadowVolumeExtrudeProgram.cpp',
  'src/OgreSimpleRenderable.cpp',
  'src/OgreSimpleSpline.cpp',
  'src/OgreSkeleton.cpp',
  'src/OgreSkeletonSerializer.cpp',
  'src/OgreSmallVector.cpp',
  'src/OgreStagingTexture.cpp',
  'src/OgreStagingTextureBufferImpl.cpp',
  'src/OgreStaticGeometry.cpp',
  'src/OgreStreamSerialiser.cpp',
  'src/OgreString.cpp',
  'src/OgreStringConverter.cpp',
  'src/OgreStringInterface.cpp',
  'src/OgreSubEntity.cpp',
  'src/OgreSubItem.cpp',
  'src/OgreSubMesh.cpp',
  'src/OgreSubMesh2.cpp',
  'src/OgreTagPoint.cpp',
  'src/OgreTangentSpaceCalc.cpp',
  'src/OgreTechnique.cpp',
  'src/OgreTextureBox.cpp',
  'src/OgreTextureFilters.cpp',
  'src/OgreTextureGpu.cpp',
  'src/OgreTextureGpuManager.cpp',
  'src/OgreTextureGpuManagerListener.cpp',
  'src/OgreTextureUnitState.cpp',
  'src/OgreUTFString.cpp',
  'src/OgreUnifiedHighLevelGpuProgram.cpp',
  'src/OgreUserObjectBindings.cpp',
  'src/OgreVector2.cpp',
  'src/OgreVector3.cpp',
  'src/OgreVector4.cpp',
  'src/OgreVertexIndexData.cpp',
  'src/OgreVertexShadowMapHelper.cpp',
  'src/OgreViewport.cpp',
  'src/OgreWindow.cpp',
  'src/OgreWindowEventUtilities.cpp',
  'src/OgreWireAabb.cpp',
  'src/OgreWireBoundingBox.cpp',
  'src/OgreWorkQueue.cpp',
  'src/OgreZip.cpp',
  'src/Threading/OgreDefaultWorkQueueStandard.cpp',
  'src/Threading/OgreWaitableEvent.cpp',
  'src/Vao/OgreAsyncTicket.cpp',
  'src/Vao/OgreBufferInterface.cpp',
  'src/Vao/OgreBufferPacked.cpp',
  'src/Vao/OgreIndirectBufferPacked.cpp',
  'src/Vao/OgreMultiSourceVertexBufferPool.cpp',
  'src/Vao/OgreStagingBuffer.cpp',
  'src/Vao/OgreUavBufferPacked.cpp',
  'src/Vao/OgreVaoManager.cpp',
  'src/Vao/OgreVertexArrayObject.cpp',
  'src/Vao/OgreVertexBufferDownloadHelper.cpp',
  'src/Vao/OgreVertexBufferPacked.cpp',
  #'src/gtk/GLX_backdrop.h',
  #'src/gtk/OgreConfigDialog.cpp',
  #'src/gtk/OgreErrorDialog.cpp',
  #'src/gtk/OgreFileSystemLayer.cpp',
  'src/nedmalloc/malloc.c.h',
  'src/nedmalloc/nedmalloc.c',
  'src/nedmalloc/nedmalloc.h',
  # 'src/ogremain.map',
  'src/stbi/stb_image.c',
  'src/stbi/stb_image.h',
  'src/stbi/stb_image_write.h',
]

linux_src = common_src + [
  # Linux
  'src/GLX/GLX_backdrop.h',
  'src/GLX/OgreConfigDialog.cpp',
  'src/GLX/OgreErrorDialog.cpp',
  'src/GLX/OgreFileSystemLayer.cpp',
  'src/GLX/OgreTimer.cpp',
  'src/Threading/OgreLightweightMutexPThreads.cpp',
  'src/Threading/OgreThreadsPThreads.cpp',
  'src/Threading/OgreBarrierPThreads.cpp',
]

win_src = common_src + [
  'src/WIN32/OgreConfigDialog.cpp',
  'src/WIN32/OgreErrorDialog.cpp',
  #'src/WIN32/OgreConfigDialogWinRT.cpp',
  #'src/WIN32/OgreErrorDialogWinRT.cpp',
  'src/WIN32/OgreFileSystemLayer.cpp',
  #'src/WIN32/OgreMinGWSupport.cpp', # This was clashing with MSVC compiler
  'src/WIN32/OgreOptimisedUtilDirectXMath.cpp',
  'src/WIN32/OgreTimer.cpp',
  #'src/WIN32/OgreWin32Resources.rc',
  #'src/WIN32/ogre.ico',
  #'src/WIN32/ogrelogo.bmp',
  #'src/WIN32/resource.h',
  'src/Threading/OgreBarrierWin.cpp',
  'src/Threading/OgreLightweightMutexWin.cpp',
  'src/Threading/OgreThreadsWin.cpp',
]

# Threading Building Blocks
# 'src/Threading/OgreDefaultWorkQueueTBB.cpp',

# Android
# src/Android/JNI/MainActivity.java
# src/Android/JNI/OgreActivityJNI.cpp
# src/Android/JNI/OgreActivityJNI.java
# src/Android/OgreAPKFileSystemArchive.cpp
# src/Android/OgreAPKZipArchive.cpp
# src/Android/OgreAndroidLogListener.cpp
# src/Android/OgreConfigDialog.cpp
# src/Android/OgreErrorDialog.cpp
# src/Android/OgreFileSystemLayer.cpp
# src/Android/OgreTimer.cpp
# src/Deprecated/OgreDDSCodec.cpp
# src/Deprecated/OgreDepthBuffer.cpp
# src/Deprecated/OgreFreeImageCodec.cpp
# src/Deprecated/OgreHardwarePixelBuffer.cpp
# src/Deprecated/OgreHlmsTextureManager.cpp
# src/Deprecated/OgreHlmsTextureManager.h
# src/Deprecated/OgreImage.cpp
# src/Deprecated/OgrePixelFormat.cpp
# src/Deprecated/OgreRenderTarget.cpp
# src/Deprecated/OgreRenderTexture.cpp
# src/Deprecated/OgreRenderToVertexBuffer.cpp
# src/Deprecated/OgreRenderWindow.cpp
# src/Deprecated/OgreTexture.cpp
# src/Deprecated/OgreTextureManager.cpp

# Native Client
# src/NaCl/OgreConfigDialog.cpp
# src/NaCl/OgreErrorDialog.cpp
# src/NaCl/OgreFileSystemLayer.cpp
# src/NaCl/OgreTimer.cpp


# iOS
# src/iOS/OgreConfigDialog.cpp
# src/iOS/OgreErrorDialog.cpp
# src/iOS/OgreFileSystemLayer.mm
# src/iOS/OgreTimer.cpp
# src/iOS/macUtils.mm

# OSX
# 'src/OSX/OgreConfigDialog.mm',
# 'src/OSX/OgreErrorDialog.mm',
# 'src/OSX/OgreFileSystemLayer.cpp',
# 'src/OSX/OgreTimer.cpp',
# 'src/OSX/macUtils.mm',

common_inc = [
'include',
'include/Animation',
'include/CommandBuffer',
'include/Compositor',
'include/Compositor/Pass',
'include/Compositor/Pass/PassClear',
'include/Compositor/Pass/PassCompute',
'include/Compositor/Pass/PassDepthCopy',
'include/Compositor/Pass/PassMipmap',
'include/Compositor/Pass/PassQuad',
'include/Compositor/Pass/PassScene',
'include/Compositor/Pass/PassStencil',
'include/Compositor/Pass/PassUav',
'include/Compute',
'include/Emscripten',
'include/GLX',
'include/Hash',
'include/Math',
'include/Math/Array',
#'include/Math/Array/C',
#'include/Math/Array/NEON',
'include/Math/Array/NEON/Single',
'include/Math/Array/SSE2',
'include/Math/Array/SSE2/Single',
'include/Math/Simple',
'include/Math/Simple/C',
'include/Threading',
'include/Vao',
'include/debugbreak',
#'include/gtk',
# TODO: Technically, we should probably invoke ogredeps as its own project. But this include path should be good enough for now.
# TODO: We should also delete the symlink once we move this over.
'../subprojects/ogredeps/src/rapidjson',
]

if host_machine.system() == 'windows'
  incdir = include_directories(common_inc + [
    'include/WIN32',
    '../hardcoded/include/win32',
  ])
else
  incdir = include_directories(common_inc + [
    '../hardcoded/include/linux',
  ])
endif

# warning('getting host system...')
# warning(host_machine.system())

# 'include/Android',
# 'include/Deprecated',
# 'include/NaCl',
# 'include/OSX',
# 'include/OSX/nib',
# 'include/OSX/nib/config.nib',
# 'include/OSX/nib/main.nib',

#gtkdep = dependency('gtk+-3.0')
if host_machine.system() == 'windows'
  deps = [
      zziplibDep,
      zlibDep,
  ]
else
  deps = [
      dependency('xrandr'),
      cc.find_library('Xaw'),
      cc.find_library('Xt'),
      cc.find_library('X11'),
      cc.find_library('dl'),
      #gtkdep,
      dependency('zlib'),
      cc.find_library('pthread'),
      cc.find_library('zzip'),
  ]
endif

# TODO: Bifurcate this such that we intelligently use linux / win based on host machine
# warning(build_machine.system())
# warning(host_machine.system())
OgreMain  = static_library('OgreMain', win_src,
  link_with: [
    #mccarthycpp,
    ],
  dependencies: deps,
  include_directories : incdir)

OgreMainDep = declare_dependency(link_with : OgreMain,
  include_directories : incdir)
