cc = meson.get_compiler('cpp')

lib_src = [
  'src/GLSL/OgreGLSLExtSupport.cpp',
  'src/GLSL/OgreGLSLMonolithicProgram.cpp',
  'src/GLSL/OgreGLSLMonolithicProgramManager.cpp',
  'src/GLSL/OgreGLSLPreprocessor.cpp',
  'src/GLSL/OgreGLSLProgram.cpp',
  'src/GLSL/OgreGLSLProgramManager.cpp',
  'src/GLSL/OgreGLSLSeparableProgram.cpp',
  'src/GLSL/OgreGLSLSeparableProgramManager.cpp',
  'src/GLSL/OgreGLSLShader.cpp',
  'src/GLSL/OgreGLSLShaderFactory.cpp',
  'src/GLSL/OgreGLSLShaderManager.cpp',
  'src/OgreGL3PlusAsyncTextureTicket.cpp',
  'src/OgreGL3PlusContext.cpp',
  'src/OgreGL3PlusDefaultHardwareBufferManager.cpp',
  'src/OgreGL3PlusEngineDll.cpp',
  'src/OgreGL3PlusHardwareBufferManager.cpp',
  'src/OgreGL3PlusHardwareCounterBuffer.cpp',
  'src/OgreGL3PlusHardwareIndexBuffer.cpp',
  'src/OgreGL3PlusHardwareOcclusionQuery.cpp',
  'src/OgreGL3PlusHardwareShaderStorageBuffer.cpp',
  'src/OgreGL3PlusHardwareUniformBuffer.cpp',
  'src/OgreGL3PlusHardwareVertexBuffer.cpp',
  'src/OgreGL3PlusMappings.cpp',
  'src/OgreGL3PlusPixelFormatToShaderType.cpp',
  'src/OgreGL3PlusPlugin.cpp',
  'src/OgreGL3PlusRenderPassDescriptor.cpp',
  'src/OgreGL3PlusRenderSystem.cpp',
  'src/OgreGL3PlusStagingTexture.cpp',
  'src/OgreGL3PlusSupport.cpp',
  'src/OgreGL3PlusTextureGpu.cpp',
  'src/OgreGL3PlusTextureGpuManager.cpp',
  'src/OgreGL3PlusTextureGpuWindow.cpp',
  'src/OgreGL3PlusVertexArrayObject.cpp',
  'src/Vao/OgreGL3PlusAsyncTicket.cpp',
  'src/Vao/OgreGL3PlusBufferInterface.cpp',
  'src/Vao/OgreGL3PlusConstBufferPacked.cpp',
  'src/Vao/OgreGL3PlusDynamicBuffer.cpp',
  'src/Vao/OgreGL3PlusMultiSourceVertexBufferPool.cpp',
  'src/Vao/OgreGL3PlusStagingBuffer.cpp',
  'src/Vao/OgreGL3PlusTexBufferEmulatedPacked.cpp',
  'src/Vao/OgreGL3PlusTexBufferPacked.cpp',
  'src/Vao/OgreGL3PlusUavBufferPacked.cpp',
  'src/Vao/OgreGL3PlusVaoManager.cpp',
  'src/gl3w.cpp',
  'src/windowing/GLX/OgreGL3PlusUtil.h',
  'src/windowing/GLX/OgreGLXContext.cpp',
  'src/windowing/GLX/OgreGLXGLSupport.cpp',
  'src/windowing/GLX/OgreGLXWindow.cpp',
]

#'src/Deprecated/OgreGL3PlusDepthBuffer.cpp',
#'src/Deprecated/OgreGL3PlusDepthTexture.cpp',
#'src/Deprecated/OgreGL3PlusFBOMultiRenderTarget.cpp',
#'src/Deprecated/OgreGL3PlusFBORenderTexture.cpp',
#'src/Deprecated/OgreGL3PlusFrameBufferObject.cpp',
#'src/Deprecated/OgreGL3PlusHardwarePixelBuffer.cpp',
#'src/Deprecated/OgreGL3PlusNullTexture.cpp',
#'src/Deprecated/OgreGL3PlusPixelFormat.cpp',
#'src/Deprecated/OgreGL3PlusRenderTexture.cpp',
#'src/Deprecated/OgreGL3PlusRenderToVertexBuffer.cpp',
#'src/Deprecated/OgreGL3PlusTexture.cpp',
#'src/Deprecated/OgreGL3PlusTextureBuffer.cpp',
#'src/Deprecated/OgreGL3PlusTextureManager.cpp',
#'src/windowing/OSX/OgreGL3PlusUtil.h',
#'src/windowing/OSX/OgreOSXCocoaContext.mm',
#'src/windowing/OSX/OgreOSXCocoaView.mm',
#'src/windowing/OSX/OgreOSXCocoaWindow.mm',
#'src/windowing/OSX/OgreOSXCocoaWindowDelegate.mm',
#'src/windowing/OSX/OgreOSXGL3PlusSupport.mm',
#'src/windowing/SDL/OgreGL3PlusUtil.h',
#'src/windowing/SDL/OgreSDLGLSupport.cpp',
#'src/windowing/SDL/OgreSDLWindow.cpp',
#'src/windowing/gtk/OgreGL3PlusUtil.h',
#'src/windowing/gtk/OgreGTKGLSupport.cpp',
#'src/windowing/gtk/OgreGTKWindow.cpp',
#'src/windowing/win32/OgreGL3PlusUtil.h',
#'src/windowing/win32/OgreWin32Context.cpp',
#'src/windowing/win32/OgreWin32GLSupport.cpp',
#'src/windowing/win32/OgreWin32Window.cpp',

incdir = include_directories(
  'include',
  'include/windowing',
  'include/windowing/GLX',
  # 'include/windowing/SDL',
  'include/Vao',
  'include/GLSL',
  'include/GL',

  # Add Windows support here
  'src/windowing/GLX',

  #'../../OgreMain/include',
  #'../../hardcoded/include',
)

#'include/Deprecated',
#'include/windowing/gtk',
#'include/windowing/win32',
#'include/windowing/OSX',

# gtkdep = dependency('gtk+-3.0')

RenderSystemGL3Plus  = library('RenderSystemGL3Plus', lib_src,
  link_with: [
    ],
  dependencies: [
    dependency('xrandr'),
    cc.find_library('dl'),
    cc.find_library('GL'),
    cc.find_library('X11'),
    OgreMainDep
  ],
  include_directories : incdir)

